--- a/themes/minimo/layouts/partials/header.html
+++ b/themes/minimo/layouts/partials/header.html
@@ -9,11 +9,7 @@
       <div class='site-header'>
         {{ partial "nav/menus/main.html" . }}
         <div class='site-info'>
-          {{ if eq .Kind "home" }}
-          <h1 class='site-title title'>{{ .Site.Title }}</h1>
-          {{ else }}
-          <p class='site-title title'>{{ .Site.Title }}</p>
-          {{ end }}
+          <img alt={{ .Site.Title }} src="/images/logo.png">
           <p class='site-description'>{{ .Site.Params.description }}</p>
         </div>
       </div>
