use logo image without extra black space

--- a/themes/minimo/layouts/partials/header.html
+++ b/themes/minimo/layouts/partials/header.html
@@ -9,7 +9,7 @@
       <div class='site-header'>
         {{ partial "nav/menus/main.html" . }}
         <div class='site-info'>
-          <img alt={{ .Site.Title }} src="/images/logo.png">
+          <img alt={{ .Site.Title }} src="/images/header.jpg">
           <p class='site-description'>{{ .Site.Params.description }}</p>
         </div>
       </div>
