added old content files, improved contact form, added footer menu

--- a/themes/minimo/layouts/partials/footer.html
+++ b/themes/minimo/layouts/partials/footer.html
@@ -7,6 +7,11 @@
         <div class='copyright'>
           {{ partial "footer/copyright.html" . }}
         </div>
+
+        <div class='footer-menu'>
+          {{ partial "footer/nav.html" . }}
+        </div>
+
       </div>
     </footer>
 
